# vulkan_tensor_matching

./: .gitignore  Cargo.toml  README.md  build.rs  typos.toml
benches/: cpu_template_matching.rs  vulkan_template_matching.rs
benches/python_benchmarks/: README.md  bench.py  performance_comparison.md  plot.py  pyproject.toml  run.sh
examples/: lenna_vulkan_matching.rs
shaders/: correlation.comp  peak_detection.comp  peak_detection.comp.spv  tensor_generation.comp
src/: error.rs  lib.rs
src/image/: fft.rs  loader.rs  matcher.rs  mod.rs  tensor_matcher.rs
src/shader/: corr.comp  tensor_generation_full.comp  tensorial_correlation.comp  tensorial_peak_detection.comp
src/tensor/: mod.rs  tensor2d.rs
src/vulkan/: device.rs  instance.rs  memory.rs  mod.rs
tests/: imageproc_comparison_test.rs  mod.rs
